add second verse

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 To wake up all the neighborhood
 To bring to every boy and girlie
 His happy serenade on wood.</p>
+		<p>Hear him pickin' out a melody
+Peck, peck, peckin' at the same old tree.
+He's as happy as a bumble bee
+			All day long.</p>
 
 </body>
 </html>  
