--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
 <head>
 </head>
 <body>
-	<h1>The Woodpecker Song</h1>
-		<p>by Marion Hutton</p>
-		<p>He's up each morning bright and early
-To wake up all the neighborhood
-To bring to every boy and girlie
-His happy serenade on wood.</p>
-		<p>Hear him pickin' out a melody
-Peck, peck, peckin' at the same old tree.
-He's as happy as a bumble bee
-			All day long.</p>
-		<p>Come on and try that rhythm
-Just let your heart beat with him
-And when you hear that tick-a-tick-tick, tick-a-tick-tick
-Tick-a-tick-tick, sing right along. </p>
-
+	<div class="song">
+			<h1>The Woodpecker Song</h1>
+				<p>by Marion Hutton</p>
+				<p>He's up each morning bright and early
+	To wake up all the neighborhood
+	To bring to every boy and girlie
+	His happy serenade on wood.</p>
+				<p>Hear him pickin' out a melody
+	Peck, peck, peckin' at the same old tree.
+	He's as happy as a bumble bee
+				All day long.</p>
+				<p>Come on and try that rhythm
+	Just let your heart beat with him
+	And when you hear that tick-a-tick-tick, tick-a-tick-tick
+	Tick-a-tick-tick, sing right along. </p>
+		</div>
 </body>
 </html>  
