Add second paragraph

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	Just let your heart beat with him
 	And when you hear that tick-a-tick-tick, tick-a-tick-tick
 	Tick-a-tick-tick, sing right along. </p>
-		</div>
+	</div>
+	<p>Co tam?</p>
 </body>
 </html>  
