--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	Peck, peck, peckin' at the same old tree.
 	He's as happy as a bumble bee
 				All day long.</p>
-				<p>Come on and try that rhythm
+				<p>Come on BABE and try that rhythm
 	Just let your heart beat with him
 	And when you hear that tick-a-tick-tick, tick-a-tick-tick
 	Tick-a-tick-tick, sing right along. </p>
