--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
 </head>
-<body>
+<body class="colors">
 	<div class="song">
 			<h1>The Woodpecker Song</h1>
 				<p>by Marion Hutton</p>
