--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <title> The song </title>
 <body>
+<body class="colors">
 	<div class="song">
 			<h1>The Woodpecker Song</h1>
 				<p>by Marion Hutton</p>
