Change title and add paragraph

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="pl">
 <head>
+	<title> The devKasia song </title>
 </head>
 <body class="colors">
 	<div class="song">
@@ -19,5 +20,6 @@
 	And when you hear that tick-a-tick-tick, tick-a-tick-tick
 	Tick-a-tick-tick, sing right along. </p>
 		</div>
+		<p>Co tam devKasia?</p>
 </body>
-</html>  
+</html>
