--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<!doctype html>
+<!Doctype html>
 <html lang="pl">
 <head>
+	<link href="css/style.css" rel="stylesheet">
 	<title> The Master song </title>
 </head>
 <body class="colors">
 	<div class="song">
-			<h1>The Woodpecker Song 4a</h1>
+			<h1>The Woodpecker Songi 4a</h1>
 
 				<p>by Marion Hutton</p>
 				<p>He's up each morning bright and early
